--- a/desteny web/desteny cabinet/dashboard.html
+++ b/desteny web/desteny cabinet/dashboard.html
@@ -143,7 +143,7 @@
               </div>
               <div class="card-body">
                 <div class="link-box">
-                  <input type="text" readonly value="https://eternal-cefi.com/?ref=Sylar" />
+                  <input type="text" readonly value="https://Destiny-cefi.com/?ref=user" />
                   <button class="btn-copy" title="Copy">
                     <svg class="btn-svg" viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><path d="M16 3H8a2 2 0 0 0-2 2v10h2V5h8V3z" fill="currentColor"/><path d="M18 7H10a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z" fill="currentColor"/></svg>
                   </button>
