--- a/desteny web/desteny cabinet/deposit.html
+++ b/desteny web/desteny cabinet/deposit.html
@@ -142,14 +142,19 @@
                 </div>
               </div>
               <div class="form-action">
+                <div class="calc-box">
+                  <div class="calc-row">
+                    <span class="calc-label">Total to receive:</span>
+                    <span id="depositEstimated" class="calc-value">0 USDT</span>
+                  </div>
+                <div class="calc-row">
+                  <span class="calc-label">Daily income:</span>
+                  <span id="depositDailyIncome" class="calc-value">0 USDT</span>
+                </div>
+                </div>
                 <button id="depositOpenBtn" class="btn-primary">Open deposit</button>
-                <span id="depositEstimated" class="estimated-return">0</span>
-                <span id="depositReturnLabel" class="return-label">for the entire period</span>
+                <p class="commission-note">When closing a flexible deposit, a commission of 5% is charged</p>
               </div>
-              <p class="commission-note">
-                When closing a flexible deposit, a commission of 5% is
-                charged
-              </p>
             </div>
           </div>
           <!-- Accrual history panel -->
