--- a/desteny web/desteny login/login.html
+++ b/desteny web/desteny login/login.html
@@ -34,7 +34,7 @@
     <!-- Login form -->
     <section class="auth-section">
       <!-- Heading directly above the card to mirror the reference layout -->
-      <h2 class="auth-heading">Log in</h2>
+      <h2 class="auth-heading">Login Account</h2>
       <div class="auth-card">
         <form class="auth-form" action="#" method="post" onsubmit="return false;">
           <input
