--- a/desteny web/desteny cabinet/send.html
+++ b/desteny web/desteny cabinet/send.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Destiny — Send</title>
+    <title>Destiny вЂ” Send</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -50,8 +50,13 @@
             <span>Support</span>
             <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
           </a>
+                  <a href="admin.html" class="nav-item nav-admin">
+            <svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M3 12h18M3 6h18M3 18h18" fill="none" stroke="currentColor" stroke-width="1.6"/></svg>
+            <span>Admin</span>
+            <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </a>
         </nav>
-        <div class="sidebar-footer"><p>Copyright © 2025<br/>Destiny<br/>All rights reserved</p></div>
+        <div class="sidebar-footer"><p>Copyright В© 2025<br/>Destiny<br/>All rights reserved</p></div>
       </aside>
       <main class="main-content">
         <header class="page-header"><h1>Send</h1></header>
@@ -120,3 +125,4 @@
     <script src="send.js"></script>
   </body>
 </html>
+
