--- a/desteny web/desteny cabinet/dashboard.html
+++ b/desteny web/desteny cabinet/dashboard.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Destiny – Dashboard</title>
+    <title>Destiny вЂ“ Dashboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -18,7 +18,7 @@
         </div>
         <div class="user-greeting">
           <span class="avatar-placeholder"></span>
-          <span>Hello, Sylar</span>
+          <span>Hello, </span>
         </div>
         <nav class="sidebar-nav">
           <a href="dashboard.html" class="nav-item active">
@@ -81,13 +81,18 @@
             <span>Support</span>
             <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
           </a>
+                  <a href="admin.html" class="nav-item nav-admin">
+            <svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M3 12h18M3 6h18M3 18h18" fill="none" stroke="currentColor" stroke-width="1.6"/></svg>
+            <span>Admin</span>
+            <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </a>
         </nav>
         <a href="../desteny/index.html" class="nav-item logout">
           <svg class="nav-icon" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path d="M16 17l5-5-5-5M21 12H9" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 19H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2h6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
           <span>Log Out</span>
         </a>
         <div class="sidebar-footer">
-          <p>Copyright © 2025<br />Destiny<br />All rights reserved</p>
+          <p>Copyright В© 2025<br />Destiny<br />All rights reserved</p>
         </div>
       </aside>
 
@@ -138,31 +143,53 @@
             <!-- Referrals link -->
             <div class="card card-referral-link">
               <div class="card-header">
-                <span>Referrals link</span>
-                <button class="btn-small">All Referrals</button>
+                <span>Referral program</span>
+                <button class="btn-small" id="allReferralsBtn">All Referrals</button>
               </div>
               <div class="card-body">
+                <p class="referral-info">Invite friends and earn <strong>10%</strong> from every qualifying deposit (starting from <strong>$100</strong>).</p>
                 <div class="link-box">
-                  <input type="text" readonly value="https://Destiny-cefi.com/?ref=user" />
-                  <button class="btn-copy" title="Copy">
+                  <input type="text" readonly id="referralLinkInput" value="" />
+                  <button class="btn-copy" id="referralLinkCopy" title="Copy">
                     <svg class="btn-svg" viewBox="0 0 24 24" width="16" height="16" aria-hidden="true"><path d="M16 3H8a2 2 0 0 0-2 2v10h2V5h8V3z" fill="currentColor"/><path d="M18 7H10a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z" fill="currentColor"/></svg>
                   </button>
                 </div>
+                <p class="referral-note">Reward is credited instantly to your balance after the deposit is approved.</p>
               </div>
+            </div>
             </div>
           </div>
 
           <!-- Bottom row: Active deposits spanning full width -->
           <div class="dashboard-grid">
-            <div class="card card-active-deposits span-all">
+            <!-- Recent activity table -->
+            <div class="card card-activity span-all">
               <div class="card-header">
-                <span>Active deposits</span>
-                <button class="btn-small">Closed Deposits</button>
+                <span>Recent activity</span>
+                <div class="pagination">
+                  <button class="page-btn" id="txPrev">Prev</button>
+                  <span class="page-info" id="txPageInfo">Page 1</span>
+                  <button class="page-btn" id="txNext">Next</button>
+                </div>
               </div>
-              <div class="card-body">
-                <p>No deposits were found!</p>
+              <div class="table-container">
+                <table>
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Type</th>
+                      <th>Amount</th>
+                      <th>Currency</th>
+                      <th>Details</th>
+                    </tr>
+                  </thead>
+                  <tbody id="txTableBody">
+                    <tr><td colspan="5">No activity yet</td></tr>
+                  </tbody>
+                </table>
               </div>
             </div>
+            
           </div>
         </div>
       </main>
