--- a/desteny web/desteny cabinet/leaderboard.html
+++ b/desteny web/desteny cabinet/leaderboard.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Destiny – Leaderboard</title>
+    <title>Destiny вЂ“ Leaderboard</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="preconnect"
@@ -30,9 +30,14 @@
           <a href="referrals.html" class="nav-item"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M16 11c1.657 0 3-1.567 3-3.5S17.657 4 16 4s-3 1.567-3 3.5S14.343 11 16 11zM8 11c1.657 0 3-1.567 3-3.5S9.657 4 8 4 5 5.567 5 7.5 6.343 11 8 11z" fill="none" stroke="currentColor" stroke-width="1.2" /><path d="M2 20c0-3.314 3.582-6 8-6s8 2.686 8 6" fill="none" stroke="currentColor" stroke-width="1.2" /></svg><span>Referrals</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
           <a href="leaderboard.html" class="nav-item active"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M12 2l2.5 6.5L21 9l-5 3.6L17.5 20 12 16.9 6.5 20 8 12.6 3 9l6.5-.5L12 2z" fill="none" stroke="currentColor" stroke-width="1.2" /></svg><span>Leaderboard</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
           <a href="#" class="nav-item"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M4 5h16a2 2 0 0 1 2 2v6a2 2 0 0 1-2 2H9l-5 4v-4H4a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="9" cy="10" r="1.1"/><circle cx="12" cy="10" r="1.1"/><circle cx="15" cy="10" r="1.1"/></svg><span>Support</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
+                  <a href="admin.html" class="nav-item nav-admin">
+            <svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M3 12h18M3 6h18M3 18h18" fill="none" stroke="currentColor" stroke-width="1.6"/></svg>
+            <span>Admin</span>
+            <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </a>
         </nav>
         <a href="../desteny/index.html" class="nav-item logout"><svg class="nav-icon" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path d="M16 17l5-5-5-5M21 12H9" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 19H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2h6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg><span>Log Out</span></a>
-        <div class="sidebar-footer"><p>Copyright © 2025<br />Destiny<br />All rights reserved</p></div>
+        <div class="sidebar-footer"><p>Copyright В© 2025<br />Destiny<br />All rights reserved</p></div>
       </aside>
       <main class="main-content main-wide">
         <header class="page-header"><h1>Leaderboard</h1></header>
@@ -82,63 +87,63 @@
                   <!-- Example rows; repeated to fill table -->
                   <tr>
                     <td>1</td>
-                    <td>Tdf19dc…9b7cfcf</td>
+                    <td>Tdf19dcвЂ¦9b7cfcf</td>
                     <td>1200</td>
-                    <td>1.2×</td>
+                    <td>1.2Г—</td>
                   </tr>
                   <tr>
                     <td>2</td>
-                    <td>Tef2b58…9142fd8</td>
+                    <td>Tef2b58вЂ¦9142fd8</td>
                     <td>1100</td>
-                    <td>1.1×</td>
+                    <td>1.1Г—</td>
                   </tr>
                   <tr>
                     <td>3</td>
-                    <td>T33479b…baeee5d</td>
+                    <td>T33479bвЂ¦baeee5d</td>
                     <td>1000</td>
-                    <td>1×</td>
+                    <td>1Г—</td>
                   </tr>
                   <tr>
                     <td>4</td>
-                    <td>T74f05a…d182add</td>
+                    <td>T74f05aвЂ¦d182add</td>
                     <td>950</td>
-                    <td>1×</td>
+                    <td>1Г—</td>
                   </tr>
                   <tr>
                     <td>5</td>
-                    <td>Tfe6dcf…bo047ef</td>
+                    <td>Tfe6dcfвЂ¦bo047ef</td>
                     <td>900</td>
-                    <td>0.9×</td>
+                    <td>0.9Г—</td>
                   </tr>
                   <tr>
                     <td>6</td>
-                    <td>T76d87d…659ae3b0</td>
+                    <td>T76d87dвЂ¦659ae3b0</td>
                     <td>850</td>
-                    <td>0.85×</td>
+                    <td>0.85Г—</td>
                   </tr>
                   <tr>
                     <td>7</td>
-                    <td>Td34a7c…ccc28f9</td>
+                    <td>Td34a7cвЂ¦ccc28f9</td>
                     <td>800</td>
-                    <td>0.8×</td>
+                    <td>0.8Г—</td>
                   </tr>
                   <tr>
                     <td>8</td>
-                    <td>Tdc58b3…af34e2d</td>
+                    <td>Tdc58b3вЂ¦af34e2d</td>
                     <td>750</td>
-                    <td>0.75×</td>
+                    <td>0.75Г—</td>
                   </tr>
                   <tr>
                     <td>9</td>
-                    <td>Tbd76c1…f40c3f7</td>
+                    <td>Tbd76c1вЂ¦f40c3f7</td>
                     <td>700</td>
-                    <td>0.7×</td>
+                    <td>0.7Г—</td>
                   </tr>
                   <tr>
                     <td>10</td>
-                    <td>Tbdc8e9…e0f58a</td>
+                    <td>Tbdc8e9вЂ¦e0f58a</td>
                     <td>650</td>
-                    <td>0.65×</td>
+                    <td>0.65Г—</td>
                   </tr>
                 </tbody>
               </table>
@@ -154,3 +159,4 @@
     <script src="cabinet.js"></script>
   </body>
 </html>
+
