--- a/desteny web/desteny cabinet/receive.html
+++ b/desteny web/desteny cabinet/receive.html
@@ -33,7 +33,12 @@
           <a href="referrals.html" class="nav-item"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M16 11c1.657 0 3-1.567 3-3.5S17.657 4 16 4s-3 1.567-3 3.5S14.343 11 16 11zM8 11c1.657 0 3-1.567 3-3.5S9.657 4 8 4 5 5.567 5 7.5 6.343 11 8 11z" fill="none" stroke="currentColor" stroke-width="1.2" /><path d="M2 20c0-3.314 3.582-6 8-6s8 2.686 8 6" fill="none" stroke="currentColor" stroke-width="1.2" /></svg><span>Referrals</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
           <a href="leaderboard.html" class="nav-item"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M12 2l2.5 6.5L21 9l-5 3.6L17.5 20 12 16.9 6.5 20 8 12.6 3 9l6.5-.5L12 2z" fill="none" stroke="currentColor" stroke-width="1.2" /></svg><span>Leaderboard</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
           <a href="#" class="nav-item"><svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M4 5h16a2 2 0 0 1 2 2v6a2 2 0 0 1-2 2H9l-5 4v-4H4a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2z" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="9" cy="10" r="1.1"/><circle cx="12" cy="10" r="1.1"/><circle cx="15" cy="10" r="1.1"/></svg><span>Support</span><svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></a>
-  </nav>
+            <a href="admin.html" class="nav-item nav-admin">
+            <svg class="nav-icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"><path d="M3 12h18M3 6h18M3 18h18" fill="none" stroke="currentColor" stroke-width="1.6"/></svg>
+            <span>Admin</span>
+            <svg class="nav-arrow" viewBox="0 0 24 24" width="12" height="12" aria-hidden="true"><path d="M9 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          </a>
+        </nav>
           <a href="../desteny/index.html" class="nav-item logout"><svg class="nav-icon" viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path d="M16 17l5-5-5-5M21 12H9" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 19H6a2 2 0 0 1-2-2V7a2 2 0 0 1 2-2h6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg><span>Log Out</span></a>
         <div class="sidebar-footer"><p>Copyright В© 2025<br />Destiny<br />All rights reserved</p></div>
       </aside>
@@ -187,3 +192,4 @@
     <script src="receive.js"></script>
   </body>
 </html>
+
