--- a/desteny web/desteny cabinet/dashboard.html
+++ b/desteny web/desteny cabinet/dashboard.html
@@ -109,7 +109,10 @@
             <div class="card card-balance">
               <div class="card-header">
                 <span>Total Balance</span>
-                <button class="btn-receive">Receive</button>
+                <div style="display:flex;gap:.5rem;">
+                  <button class="btn-small" id="addFundsBtn" style="background:#10b981;color:white;">+ Add Funds</button>
+                  <button class="btn-receive">Receive</button>
+                </div>
               </div>
               <div class="card-body">
                 <div style="display:flex;align-items:center;gap:.4rem;color:#cbd3f4;font-size:.9rem;margin-bottom:.4rem;">
