--- a/desteny web/desteny cabinet/deposit.html
+++ b/desteny web/desteny cabinet/deposit.html
@@ -129,7 +129,7 @@
                 <div class="form-field">
                   <label>Amount</label>
                   <input id="depositAmount" type="number" placeholder="e.g. 2000" min="0" />
-                  <div id="depositAmountNote" class="form-hint" style="display:none"></div>
+                  <div id="depositAmountNote" class="form-hint" style="display:none;margin-top:.5rem;"></div>
                 </div>
                 <div class="form-field">
                   <label>Currency</label>
