--- a/desteny web/desteny cabinet/dashboard.html
+++ b/desteny web/desteny cabinet/dashboard.html
@@ -95,6 +95,7 @@
           <p>Copyright В© 2025<br />Destiny<br />All rights reserved</p>
         </div>
       </aside>
+      <div class="sidebar-overlay"></div>
 
       <!-- Main content area -->
       <main class="main-content">
