--- a/desteny web/desteny login/login.html
+++ b/desteny web/desteny login/login.html
@@ -58,7 +58,7 @@
           </p>
           <p class="auth-alt">
             Forgot your password?
-            <a href="#" class="auth-link">Restore</a>
+            <a href="reset.html" class="auth-link">Reset Password</a>
           </p>
         </form>
       </div>
